# RUST-WEB-SERVER

./: Cargo.toml  config.json  readme.md
sh/: build.sh
src/config/: config.rs
src/global/: global.rs
src/gzip/: gzip.rs
src/http/: request.rs  response.rs
src/proxy/: proxy.rs
src/request/: request.rs
